Fix invisible states in filter on documents list.

--- a/app/assets/stylesheets/documents/partials/_tables.scss
+++ b/app/assets/stylesheets/documents/partials/_tables.scss
@@ -71,6 +71,7 @@ tr{
       > th,
       > td {
         @include clearfix();
+        overflow: visible;
         padding: $table-cell-padding;
         line-height: $line-height-base;
         border-top: 1px solid $table-border-color;
